fix visible buttons on admin request detail page

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,6 +1,6 @@
 #donor-list {
   width: 200px;
-  height: 75px;
+  height: 100px;
   overflow: auto;
 }
 
